# hyde-qemu

./: .gdbinit  NOTES.txt  README.rst  hmp-commands.hx  meson.build  qemu-options.hx  run.sh
accel/kvm/: hyde.cpp  hyde.h  hyde_common.h  hyde_coro.h  hyde_helpers.cpp  hyde_helpers.h  hyde_internal.h  hyde_macros.h  kvm-all.c  kvm-cpus.h  meson.build
hyde/: meson.build
hyde/include/: hsyscall.h  hyde_common.h  internal.h  plugin_common.h  qemu_api.h  runtime.h  syscall_context.h  syscall_coroutine.h  syscallctx.h
hyde/src/: panda_inj.py  panda_test.py  qemu_api.cpp  runtime.cpp  runtime_instance.cpp  runtime_instance.h  syscall_context.cpp  syscall_context_internal.cpp  syscall_context_internal.h  syscallctx.cpp  syscallctx_internal.cpp  syscallctx_internal.h
hyde_eval/: bench1.sh  bench5.sh
include/migration/: snapshot.h
include/monitor/: hmp.h
include/sysemu/: kvm.h
migration/: savevm.c
monitor/: hmp-cmds.c  misc.c  qmp-cmds.c
qapi/: misc.json
softmmu/: runstate.c  vl.c
